--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,9 @@ a:hover {
 }
 
 body {
+  background-color: #9598cc;
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -34,6 +34,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  text-shadow: 0px 0px 15px rgb(255, 255, 255);
 }
 
 button {
