--- a/src/screens/ScoreAdd/styles.module.css
+++ b/src/screens/ScoreAdd/styles.module.css
@@ -1,4 +1,26 @@
 .BoxAdd form{
+    background-color: rgb(185, 185, 185);
     display: flex;
     flex-direction: column;
+    width: 400px;
+    margin: 30px auto;
+    gap: 10px;
+    padding: 20px;
+    border-radius: 12px;
+}
+
+.BoxAdd button{
+    width: 100px;
+    margin: 0 auto;
+}
+
+.BoxAdd input{
+    font-size: large;
+    border-radius: 6px;
+    text-align: center;
+}
+
+.BoxAdd label{
+    font-weight: bold;
+    font-size: large;
 }
