--- a/src/App.css
+++ b/src/App.css
@@ -19,12 +19,13 @@
 }
 
 .scoreBox{
-  background-color: rgb(237, 235, 243);
+  background-color: rgb(221, 218, 229);
   margin: 30px auto;
   width: 65vw;
-  border-radius: 0 0 12px 12px;
+  border-radius: 0 0 14px 14px;
   border: solid 1px rgb(84, 84, 84);
   box-shadow: 6px 6px 5px rgb(38, 38, 38);
+  overflow: hidden;
 }
 
 .scoreBox thead{
@@ -32,14 +33,15 @@
 }
 
 .scoreBox th{
-  font-size:x-large;
+  font-size:xx-large;
   width: 33%;
   color: white;
 }
 
 .scoreBox td{
   font-weight: bold;
-  font-size: large;
+  font-size: x-large;
+  background-color: rgb(255, 255, 255);
 }
 
 .scoreBox button{
