--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,11 @@ a:hover {
 }
 
 body {
-  background-color: #9598cc;
+  /* background-color: #9598cc; */
+  background-image: url('../public/Fondo2.jpg'); /* Ruta de la imagen de fondo */
+  background-size: cover; /* Ajusta la imagen para cubrir el contenedor */
+  background-attachment: fixed; /* Opcional: fija la imagen de fondo al desplazarse */
+  background-repeat: no-repeat; /* Opcional: evita la repetición de la imagen */
   margin: 0;
   display: flex;
   min-width: 320px;
